Add SCM attributes to all plugins pom

--- a/portal/trunk/plugins/technical/plugin-rest/pom.xml
+++ b/portal/trunk/plugins/technical/plugin-rest/pom.xml
@@ -112,4 +112,9 @@
             <version>1.2.5</version>
         </dependency>
     </dependencies>
+    <scm>
+        <connection>scm:svn:http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical</connection>
+        <developerConnection>scm:svn:https://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical</developerConnection>
+        <url>http://dev.lutece.paris.fr/viewvc/portal/trunk/plugins/technical</url>
+    </scm>
 </project>
