--- a/portal/trunk/plugins/technical/plugin-rest/pom.xml
+++ b/portal/trunk/plugins/technical/plugin-rest/pom.xml
@@ -27,7 +27,7 @@
         <repository>
             <id>maven2-repository.dev.java.net</id>
             <name>Java.net Repository for Maven</name>
-            <url>http://download.java.net/maven/2/</url>
+            <url>http://download.java.net/maven/2//plugin-rest</url>
             <layout>default</layout>
         </repository>
     </repositories>
@@ -113,8 +113,8 @@
         </dependency>
     </dependencies>
     <scm>
-        <connection>scm:svn:http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical</connection>
-        <developerConnection>scm:svn:https://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical</developerConnection>
-        <url>http://dev.lutece.paris.fr/viewvc/portal/trunk/plugins/technical</url>
+        <connection>scm:svn:http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/plugin-rest</connection>
+        <developerConnection>scm:svn:https://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/plugin-rest</developerConnection>
+        <url>http://dev.lutece.paris.fr/viewvc/portal/trunk/plugins/technical/plugin-rest</url>
     </scm>
 </project>
