--- a/portal/trunk/plugins/technical/plugin-rest/pom.xml
+++ b/portal/trunk/plugins/technical/plugin-rest/pom.xml
@@ -27,7 +27,7 @@
         <repository>
             <id>maven2-repository.dev.java.net</id>
             <name>Java.net Repository for Maven</name>
-            <url>http://download.java.net/maven/2//plugin-rest</url>
+            <url>http://download.java.net/maven/2</url>
             <layout>default</layout>
         </repository>
     </repositories>
